--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -29,9 +29,10 @@ serde_json = "1"
 fastrand = "1.0"
 #webrtcsink-protocol = { version = "0.1", path="../protocol" }
 human_bytes = "0.3.1"
-reqwest = { version = "0.11", features = ["blocking"] }
+#reqwest = { version = "0.11", features = ["blocking"] }
 #parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
 #no_deadlocks = "1.3.0"
+surf = "2.3.2"
 
 [dev-dependencies]
 tracing = { version = "0.1", features = ["log"] }
